[gd_scene load_steps=6 format=3 uid="uid://dmkkjwky2ig2p"]

[ext_resource type="Script" uid="uid://4aohe8v3if5c" path="res://scenes/ui/main_game_ui.gd" id="1_bb4rc"]
[ext_resource type="Texture2D" uid="uid://rf8eq32s4i6" path="res://icon.svg" id="1_i8egv"]
[ext_resource type="Theme" uid="uid://c56esfkypxlsi" path="res://scenes/ui/ui_theme.tres" id="2_48pfk"]
[ext_resource type="Texture2D" uid="uid://unnkcrkc7vt8" path="res://scenes/ui/assets/health_bar/health_none.png" id="2_l6kk8"]
[ext_resource type="Texture2D" uid="uid://st3b4atwjrp5" path="res://scenes/ui/assets/health_bar/health_full.png" id="3_bb4rc"]

[node name="MainGameUi" type="CanvasLayer" groups=["enemy_killed_observer"]]
script = ExtResource("1_bb4rc")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_48pfk")

[node name="BottomLeft" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 221.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Control/BottomLeft"]
layout_mode = 2
texture = ExtResource("1_i8egv")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/BottomLeft"]
layout_mode = 2
alignment = 1

[node name="CharacterName" type="Label" parent="Control/BottomLeft/VBoxContainer"]
layout_mode = 2
text = "Cool Knight"

[node name="HealthBar" type="TextureProgressBar" parent="Control/BottomLeft/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
texture_under = ExtResource("2_l6kk8")
texture_progress = ExtResource("3_bb4rc")

[node name="RestartPanel" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/RestartPanel"]
layout_mode = 2

[node name="GameOverPanel" type="PanelContainer" parent="Control/RestartPanel/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Control/RestartPanel/VBoxContainer/GameOverPanel"]
layout_mode = 2
text = "Game Over!"

[node name="WinPanel" type="PanelContainer" parent="Control/RestartPanel/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Control/RestartPanel/VBoxContainer/WinPanel"]
layout_mode = 2
text = "You Won!"

[node name="RestartButton" type="Button" parent="Control/RestartPanel/VBoxContainer"]
layout_mode = 2
text = "Start over"

[node name="BottomRight" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="Control/BottomRight"]
layout_mode = 2
text = "Enemies killed:"

[node name="EnemiesKilled" type="Label" parent="Control/BottomRight"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 2

[connection signal="pressed" from="Control/RestartPanel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
